--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li><a href="#Kant">Immanuel Kant</a></li>
         <li><a href="#Hegel">Georg Wilhelm Friedrich Hegel<a></li>
         <li><a href="#Nietzsche">Friedrich Nietzsche</a></li>
+        <li><a href="#Descartes">René Descartes</a></li>
       </ol>
       <p><strong> Artists:</strong></p>
       <ol type="I">
@@ -100,7 +101,17 @@
                <li><strong>On the Genealogy of Morals</strong> - identified the master and slave forms of morals</li>
              </ul></div>
     
-          
+          <h3 id="Descartes">July 10, 2020: René Descartes>/h3><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Frans_Hals_-_Portret_van_René_Descartes.jpg/440px-Frans_Hals_-_Portret_van_René_Descartes.jpg" width="100"/>
+          <div class="infobox">
+            <p>French philosopher and mathmatician who believed that the pineal gland was the principal seat of the soul and the place<br>
+               where all of our thoughts are formed. </p>
+            <ul>
+              <li><strong>Discourse on Method</strong> - cogito, ergo sum</li>
+              <li><strong>Regulae (Rules for the Direction of the Mind)</strong> - written during his 20 years in the Netherlands</li>
+              <li><strong>Le Monde</strong> - Based on the studies of Copernicus which were hidden after Galileo's persecution</li>
+              <li><strong>Passions of the Soul</strong> - written in French while tutoring the Swedish Queen Christina</li>
+            </ul></div>
+   
           <h3 id="Miró">July 8, 2020: Joan Miró</h3>
               <div class="infobox">
                 <p><em>Spanish Surrealist</em> painter, sculptor, and ceramicist. He met Picasso, the surrealists, and some Dadaist artists in Paris.<br>
