--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                <li><strong>On the Genealogy of Morals</strong> - identified the master and slave forms of morals</li>
              </ul></div>
     
-          <h3 id="Descartes">July 10, 2020: René Descartes>/h3><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Frans_Hals_-_Portret_van_René_Descartes.jpg/440px-Frans_Hals_-_Portret_van_René_Descartes.jpg" width="100"/>
+          <h3 id="Descartes">July 10, 2020: René Descartes</h3><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Frans_Hals_-_Portret_van_René_Descartes.jpg/440px-Frans_Hals_-_Portret_van_René_Descartes.jpg" width="100"/>
           <div class="infobox">
             <p>French philosopher and mathmatician who believed that the pineal gland was the principal seat of the soul and the place<br>
                where all of our thoughts are formed. </p>
