--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <li><a href="#Hegel">Georg Wilhelm Friedrich Hegel<a></li>
         <li><a href="#Nietzsche">Friedrich Nietzsche</a></li>
         <li><a href="#Descartes">René Descartes</a></li>
+        <li><a href="#Kierkegaard">Soren Aabye Kierkegaard</a></li>
       </ol>
       <p><strong> Artists:</strong></p>
       <ol type="I">
@@ -110,6 +111,21 @@
               <li><strong>Regulae (Rules for the Direction of the Mind)</strong> - written during his 20 years in the Netherlands</li>
               <li><strong>Le Monde</strong> - Based on the studies of Copernicus which were hidden after Galileo's persecution</li>
               <li><strong>Passions of the Soul</strong> - written in French while tutoring the Swedish Queen Christina</li>
+            </ul></div>
+          <h3 id="Kierkegaard">July 11, 2020: Soren Aabye Kierkegaard</h3><img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Søren_Kierkegaard_%281813-1855%29_-_%28cropped%29.jpg width="100"/>
+          <div class="infobox">
+            <p>A Danish philosopher, fervent Christian, and influential to existentialism.<br>
+              Wrote his works from several viewpoints to show various styles of thinking. <br>
+              Dread plays an important role in his thought and the highest stage of human existence is reached through overcoming it through a paradoxical thought process.<br>
+              He felt that modern society reduced the meaning of the individual.</p>
+            <ul>
+              <li><strong>The Sickness unto Death</strong> - written under the pseud “Anti-Climacus” and discussed the threshold for when a human is in despair<br>
+                when not aligned with God. The title is taken from the Gospel of John</li>
+              <li><strong>Either/Or</strong> - </li>
+              <li><strong>Fear and Trembling</strong> - discusses the “teleological suspension of the ethical” on whether Abraham was justified in sacrificing Isaac.<br>
+                Written under the pseudonym John the Silent and published the same year as Either/Or. Ends with a discussion of Heraclitus.<br>
+                3 chapters titled Problema explain the actions of the knight of faith as contrasted to the knight of infinite resignation. </li>
+              <li><strong>The Book on Adler</strong> - criticized the title figure for claiming to have revelations from God </li>
             </ul></div>
    
           <h3 id="Miró">July 8, 2020: Joan Miró</h3>
