--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <ol type="I">
         <li><a href="#Miró">Joan Miró</a></li>
         <li><a href="#Greco">El Greco</a></li>
+        <li><a href="#Hogarth">William Hogarth</a></li>
       </ol>
     <h3 id="Kant">July 7, 2020: Immanuel Kant</h3><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Kant_gemaelde_3.jpg" width="100"/>
     <div class="infobox">
@@ -112,7 +113,7 @@
               <li><strong>Le Monde</strong> - Based on the studies of Copernicus which were hidden after Galileo's persecution</li>
               <li><strong>Passions of the Soul</strong> - written in French while tutoring the Swedish Queen Christina</li>
             </ul></div>
-          <h3 id="Kierkegaard">July 11, 2020: Soren Aabye Kierkegaard</h3><img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Søren_Kierkegaard_%281813-1855%29_-_%28cropped%29.jpg width="100"/>
+          <h3 id="Kierkegaard">July 11, 2020: Soren Aabye Kierkegaard</h3><img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Kierkegaard.jpg width="100"/>
           <div class="infobox">
             <p>A Danish philosopher, fervent Christian, and influential to existentialism.<br>
               Wrote his works from several viewpoints to show various styles of thinking. <br>
@@ -158,6 +159,19 @@
                       The subject is from Revelation with the souls of martyrs crying out to God for justice. St. John strangely points<br>
                       at nowhere, with naked souls behind him.</li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/The_Vision_of_Saint_John_MET_DT1052.jpg/600px-The_Vision_of_Saint_John_MET_DT1052.jpg" width="100"/>
                   </ul></div>
+            <h3 id="Hogarth">July 12, 2020: William Hogarth</h3>
+              <div class="infobox">
+                <p>English painter and cartoonist and a member of the Rose and Crown Club.<br>
+            He lobbied in parliament for the Engraves' Copyright Act or Hogarth's Act.</p>
+                <ul>
+                  <li><strong>A Harlot's Progress</strong> - a series of six scenes that show the fate of a country girl who becomes a prostitute.<br>
+            They are chronological and show her dying from venereal disease.</li>
+                  <li><strong>A Rake's Progress</strong> - The sequel which shows 8 pictures of Tom Rakewell, a rich gambler, who spends all his money<br>
+            on prostitudes and luxurious living. The originals were destryoed in a fire.</li>
+                  <li><strong>Marriage A-la-Mode</strong> - 6 pictures that serve as a warning of a marriage for money. <br>
+            Viscout Squanderfield marries a woman, but her lover kills Squanderfield and she commits suicide after the lover is hanged.</li>
+                  <li><strong>Industry and Idleness</strong> - 12 prints of two apprentices, one who is hardworking and the other who is lazy.</li>
+                </ul></div>
 
   </body>
 </html>
