--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="#Nietzsche">Friedrich Nietzsche</a></li>
         <li><a href="#Descartes">René Descartes</a></li>
         <li><a href="#Kierkegaard">Soren Aabye Kierkegaard</a></li>
+        <li><a href="#Sartre">Jean-Paul Sartre</a></li>
       </ol>
       <p><strong> Artists:</strong></p>
       <ol type="I">
@@ -128,7 +129,18 @@
                 3 chapters titled Problema explain the actions of the knight of faith as contrasted to the knight of infinite resignation. </li>
               <li><strong>The Book on Adler</strong> - criticized the title figure for claiming to have revelations from God </li>
             </ul></div>
-   
+          <h3 id="Sartre">August 6, 2020: Jean-Paul Sartre</h3>
+            <div class="infobox">
+            <p>An existentialist Continental philosopher. Had a relationship with Simone de Beauvoir, a feminist writer.<br>
+            Won the 1964 Nobel Prize in Literature despite not wanting it</p>
+            <ul>
+              <li><strong>Being and Nothingness</strong> - a case of bad faith, where he describes the creation of essence by the authentic being-for-itself</li>
+              <li><strong>Transcendence of the Ego</strong> - broke from phenomenology by characterizing the ego as an incidental object </li>
+              <li><strong>Search for a Method</strong> - refuted Lukacs’ philosophy
+              <li><strong>Critique of Dialectical Reason</strong> - Described the “practico-inert” and “praxis” in his Marxist theory of class. Sequel to Search for a Method</li>
+              <li><strong>Anti-Semite and Jew</strong> - an intersubjective definition of being Jewish</li>
+              <li><strong>No Exit</strong> - existentialist play where three men are trapped in a room that is the afterlife. "Hell is other people"</li>
+            </ul></div>
           <h3 id="Miró">July 8, 2020: Joan Miró</h3>
               <div class="infobox">
                 <p><em>Spanish Surrealist</em> painter, sculptor, and ceramicist. He met Picasso, the surrealists, and some Dadaist artists in Paris.<br>
